fix: change background visibility on stroybook

--- a/.storybook/style.scss
+++ b/.storybook/style.scss
@@ -1,46 +1,51 @@
 @import '../node_modules/@elastic/eui/src/theme_light.scss';
 
+html {
+  background-color: white;
+}
+
 .story-chart {
   box-sizing: border-box;
   background: white;
 }
+
 .story-chart-dark {
   box-sizing: border-box;
   background: #1a1b20;
 }
-#root {
-  background-color: blanchedalmond;
-}
+
 #story-root {
   padding: 20px;
   width: 100%;
   height: 400px;
   position: relative;
   box-sizing: border-box;
+  background-color: blanchedalmond;
 }
+
 #story-root + div table {
   border: 1px solid gray;
 }
+
 #story-root + div table th {
   border: 1px solid gray;
   padding: 5px;
 }
+
 #story-root + div table td {
   border: 1px solid gray;
   padding: 5px;
 }
+
 .Pane.vertical.Pane1 {
   background: red;
 }
 
-
-html {
-  background-color: white;
-}
-html body {
+html body.echVisualTesting {
   visibility: hidden;
+
+  #story-root, [id^=echTooltipPortal] {
+    visibility: visible;
+  }
 }
 
-#story-root,#echTooltipPortalMainTooltip, #echTooltipPortalAnnotationTooltip {
-  visibility: visible;
-}
